# cavity_optimiser

./: .gitignore  README.md  Readme.md  cavity-0.1.1-py3-none-any.whl  core.py  pyproject.toml
calc/: Geometric_part.py  L_R_space.py  clipping.py  robustness.py  test_optimise.py
cavity/: core.py
cavity/EXAMPLES/: L_R_probability_map.py  plot_p.py  plot_results.py
cavity/EXAMPLES/DEBUG/: check_optimum.py  test_diameter_limit.py  test_optimise.py
docs/source/: cavity.rst  conf.py  index.rst
figures/: Figures.py  Plot_geometric_part.py  Plot_robust.py  plot_3d.py  plot_LR.py  plot_clipping.py  plot_optimise.py
src/cavity/: core.py
src/cavity.egg-info/: PKG-INFO  SOURCES.txt
src/cavity/EXAMPLES/: L_R_probability_map.py  plot_p.py  plot_results.py
src/cavity/EXAMPLES/DEBUG/: check_optimum.py  test_diameter_limit.py  test_optimise.py
