[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cavity"
version = "0.1.1"
authors = [
  { name="Jacob Blackmore", email="jacob.blackmore@physics.ox.ac.uk" },
]
description = "A package for optimising optical microcavities for cQED experiments in trapped atoms or ions."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD 3 clause License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/JakeBlackmore/cavity_optimiser"
"Bug Tracker" = "https://github.com/JakeBlackmore/cavity_optimiser/issues"
